--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "mobx-react-lite": "^3.4.0",
     "next": "13.0.7",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "socket.io-client": "^4.5.4"
   },
   "devDependencies": {
     "eslint": "^8.16.0",
