--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "flv.js": "^1.6.2",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
     "next": "13.0.7",
